<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="instrument"
            type="com.example.assignment2.Instrument" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"

            android:layout_width="match_parent"
            android:layout_height="90dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/background"
                app:contentScrim="?attr/colorPrimary"

                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"></androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/icon"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="1dp"
                        app:srcCompat="@drawable/note" />

                    <TextView
                        android:id="@+id/credit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:text="100"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textSize="24sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="32sp"
                        android:layout_height="32sp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/bell"
                        tools:layout_marginRight="10dp" />
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="20dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="0"
                        app:cardBackgroundColor="#F8F8F8"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                app:cardElevation="0dp">

                                <ImageView
                                    android:id="@+id/imageView"
                                    style="@style/instrument_image"
                                    tools:srcCompat="@tools:sample/avatars" />
                            </androidx.cardview.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="12dp"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/textView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@{instrument.name}"
                                        android:textSize="32sp"
                                        android:textStyle="bold" />

                                    <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="3sp"
                                        android:backgroundTint="@color/third"
                                        app:cardCornerRadius="15dp"
                                        app:cardElevation="0dp">

                                        <TextView
                                            android:id="@+id/textView9"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="8sp"
                                            android:layout_marginRight="8sp"
                                            android:layout_weight="0"
                                            android:Text="@{instrument.months > 0 ? (instrument.months + @string/months_left) : @string/not_rented}"
                                            android:padding="4sp"
                                            android:text="6 Months Left"
                                            android:textColor="@color/textbadge"
                                            android:textSize="23sp"
                                            android:textStyle="bold" />
                                    </androidx.cardview.widget.CardView>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="12dp"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:id="@+id/imageView3"
                                        style="@style/icon"
                                        android:layout_marginRight="3dp"
                                        app:srcCompat="@drawable/star" />

                                    <TextView
                                        android:id="@+id/textView2"
                                        style="@style/secondarytext"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@{String.valueOf(instrument.rating)}" />

                                    <ImageView
                                        android:id="@+id/imageView6"
                                        style="@style/icon"
                                        android:layout_marginRight="1dp"
                                        android:layout_weight="0"
                                        app:srcCompat="@drawable/note" />

                                    <TextView
                                        android:id="@+id/textView6"
                                        style="@style/secondarytext"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0"
                                        android:text="@{String.valueOf(instrument.cost)}" />

                                    <TextView
                                        android:id="@+id/textView4"
                                        style="@style/secondarytext"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0"
                                        android:text="/Month" />

                                </LinearLayout>

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@{instrument.description}"
                                    android:textColor="#808080"
                                    android:textSize="21sp" />

                                <Button
                                    android:id="@+id/btn_rent"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:backgroundTint="@color/secondary"
                                    android:text="Rent"
                                    android:textSize="28sp" />

                                <RatingBar
                                    android:id="@+id/ratingBar"
                                    android:layout_width="wrap_content"
                                    android:layout_height="50dp"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:numStars="5"
                                    android:rating="0"
                                    android:stepSize="0.5" />

                            </LinearLayout>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="12dp"
                            android:src="@drawable/bookmark"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_previous"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.3"
                            android:text="Previous"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/btn_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.7"
                            android:text="Next"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
