...
                        style="@style/icon"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="1dp"
                        app:srcCompat="@drawable/note" />

                    <TextView
                        android:id="@+id/credit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:text="100"
                        android:textColor="#FFFFFF"
...
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="18dp"
                                    android:text="Duration (Months):" />

                                <EditText
                                    android:id="@+id/duration"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:inputType="numberSigned"
                                    android:textColor="@color/textlight"
                                    android:textSize="24sp" />
...
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.4"
                            android:text="Cancel"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.6"
                            android:text="Save"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

...
